[package]
name = "uss-language-server"
version = "0.1.0"
edition = "2021"
authors = ["Sharif Bayoumy <contact@sharifbayoumy.com>"]
description = "USS (Unity Style Sheets) Language Server for Unity UI Toolkit"
license = "MIT"
repository = "https://github.com/GameBayoumy/uss-language-server"
homepage = "https://github.com/GameBayoumy/uss-language-server"
keywords = ["lsp", "language-server", "uss", "unity", "ui-toolkit"]
categories = ["development-tools", "text-editors"]
readme = "README.md"

[[bin]]
name = "uss-language-server"
path = "src/main.rs"

[dependencies]
tower-lsp = "0.20"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
ropey = "1.6"
regex = "1"
log = "0.4"
env_logger = "0.11"
dashmap = "6"
once_cell = "1.19"

[profile.release]
lto = true
codegen-units = 1
strip = true
opt-level = "z"
